# aiwechat

./: .gitignore  INTRO_PAGE.md  README.md  TYPOGRAPHY_UPDATE.md  data.db  package-lock.json  package.json  tailwind.config.ts
app/: layout.tsx
app/ai/: page.tsx
app/components/: AiContent.tsx  FriendsContent.tsx  HeaderNav.tsx  SendContent.tsx  SystemSettings.tsx
app/friends/: page.tsx
app/groups/: page.tsx
app/intro/: page.tsx
app/marketing/: page.tsx
app/settings/: page.tsx
app/styles/: button-spec.md  theme.md  typography-spec.md
backend/: __init__.py  ai_qa.py  db.py  get_wx_friend_list.py  listen_new_message.py  main.py  models.py  pyproject.toml  routes.py  scheduler.py  wechat.py  wechat_friends.db
